# DetectPlayIntegrixFix

./: README.md
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.c
app/src/main/java/com/example/assessment1/: BaseClass.kt  IntegrityChecker.kt  MainActivity.kt
gradle/wrapper/: gradle-wrapper.properties
